[build-system]
requires = ["setuptools", "wheel", "pytest-runner"]
[tool.black]
line-length = 128
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
)/
'''
# Uncomment to always show output from tests in pytest
# [tool.pytest.ini_options]
# addopts = "-s"
[tool.pylint.messages_control]
max-line-length = 128
disable="C0114, R0903, W0718, W0401, C0302"
